k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server
  labels:
    name: echo-server
    app: echo-server
