k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service
  namespace: echo-server
  labels:
    app: echo-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: echo-server
